# virtualization-implementation

./: .env.example  .env.test  .gitignore  PRODUCT_DESCRIPTION.md  README.md  auth_service.py  cloudinit.py  config.py  database.py  dockerfile  index.html  infra.md  libvirt_client.py  main.py  network.py  pyproject.toml  storage.py
SQL/: USERS_related.py  VM_related.py  database.py
ansible/: inventory.ini  playbook.yml  requirements.yml  setup.sh
frontend/: index.html
templates/: domain.xml.j2  meta-data.yaml.j2  network-config.yaml.j2  user-data.yaml.j2
tests/: conftest.py  test_auth_service.py  test_cloudinit.py  test_config.py  test_database.py  test_network.py  test_storage.py  test_users_related.py  test_vm_related.py
vm-dashboard/: main.py
vm_provisioner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
