[project]
name = "vm-provisioner"
version = "0.1.0"
description = "VM Provisioning Service using Libvirt/KVM"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pycdlib>=1.14.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "libvirt-python>=9.0.0",
    "scrypt>=0.8.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
